--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@
 }
 
 .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     /* height: 100px; */
     background-color: #f0f0f0;
@@ -84,12 +88,15 @@ form input[type='submit'] {
     text-align: center;
     font-size: 3rem;
     margin: 20px 0;
+    color: #333;
 }
 
 .date-info {
     text-align: center;
     margin: -15px 0 10px 0;
     font-size: 1.5rem;
+    font-weight: normal;
+    color: #333;
 }
 
 .current {
@@ -107,6 +114,11 @@ form input[type='submit'] {
 
 .current .condition-text {
     font-size: 1.8rem;
+    color: #333;
+}
+
+.temperature {
+    color: rgb(48, 100, 150);
 }
 
 .temperature-data {
@@ -123,6 +135,12 @@ form input[type='submit'] {
 
 sup.deg {
     font-size: 2rem;
+}
+
+.title-hour {
+    color: #333;
+    font-weight: bold;
+    margin-bottom: -25px;
 }
 
 .hour-forecast {
@@ -177,8 +195,11 @@ sup.deg {
     text-decoration: none;
 }
 
-/* 
+/* page loader */
 .loader {
+position: absolute;
+top: 50%;
+left: 50%;
   width: 50px;
   padding: 8px;
   aspect-ratio: 1;
@@ -193,4 +214,4 @@ sup.deg {
           mask-composite: subtract;
   animation: l3 1s infinite linear;
 }
-@keyframes l3 {to{transform: rotate(1turn)}} */ 
+@keyframes l3 {to{transform: rotate(1turn)}} 
